<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation.xml"
    app:startDestination="@+id/nav_map">
    <action
        android:id="@+id/action_global_nav_map"
        app:destination="@id/nav_map"
        app:launchSingleTop="true">
        <argument
            android:name="LOCATION_ARGS"
...
            android:name="FAVOR_VALUE_ARGS"
            android:defaultValue="@null"
            app:argType="ch.epfl.favo.favor.Favor" />
    </action>
    <action
        android:id="@+id/action_global_nav_account"
        app:destination="@id/nav_account"
        app:launchSingleTop="true" />
    <action
        android:id="@+id/action_global_nav_share"
        app:destination="@id/nav_share" />


    <fragment
        android:id="@+id/nav_account"
        android:name="ch.epfl.favo.view.tabs.UserAccountPage"
        android:label="@string/account"
        tools:layout="@layout/fragment_user_account" />

    <fragment
        android:id="@+id/nav_shop"
        android:name="ch.epfl.favo.view.tabs.shop.ShopPage"
        android:label="@string/shop"
        tools:layout="@layout/fragment_shop" />
    <fragment
        android:id="@id/nav_settings"
        android:name="ch.epfl.favo.view.tabs.FragmentSettings"
        android:label="@string/settings" />

    <fragment
        android:id="@id/nav_about"
        android:name="ch.epfl.favo.view.tabs.FragmentAbout"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_share"
        android:label="@string/share" />
    <fragment
        android:id="@+id/userInfoView"
        android:name="ch.epfl.favo.view.tabs.UserInfoPage"
        android:label="User Info Page"
        tools:layout="@layout/fragment_user_info" />
    <fragment
...

    </fragment>
    <fragment
        android:id="@+id/nav_map"
        android:name="ch.epfl.favo.view.tabs.MapPage"
        android:label="Map"
        tools:layout="@layout/fragment_map">
        <action
            android:id="@+id/action_nav_map_to_nearby_favor_list"
            app:destination="@id/nav_nearby_favor_list"
            app:launchSingleTop="true" />
        <action
            android:id="@+id/action_nav_map_to_nav_favorlist"
            app:destination="@id/nav_favorList"
            app:launchSingleTop="true" />
        <action
            android:id="@+id/action_nav_map_to_favorEditingView"
            app:destination="@id/favorEditingView">
            <argument
                android:name="FAVOR_VALUE_ARGS"
...
